fix: fix URL for adding products
