# controllers/product_controller.go
@@ -56,7 +56,7 @@ func GetProduct(context *gin.Context) {
 // @Failure 400 {object} map[string]string "Données invalides"
 // @Failure 500 {object} map[string]string "Erreur interne"
 // @Security BearerAuth
-// @Router /product [post]
+// @Router /products [post]
 func PostProduct(context *gin.Context) {
 	var input models.ProductInsertInput
 	if err := context.ShouldBindJSON(&input); err != nil {
