# docs/swagger.yaml
@@ -790,7 +790,22 @@ paths:
       - BearerAuth: []
       tags:
       - Orders
-  /product:
+  /products:
+    get:
+      description: Récupérer tous les produits
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Product'
+            type: array
+      security:
+      - BearerAuth: []
+      tags:
+      - Products
     post:
       consumes:
       - application/json
@@ -821,22 +836,6 @@ paths:
             additionalProperties:
               type: string
             type: object
-      security:
-      - BearerAuth: []
-      tags:
-      - Products
-  /products:
-    get:
-      description: Récupérer tous les produits
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Product'
-            type: array
       security:
       - BearerAuth: []
       tags:
